--- a/src/index.css
+++ b/src/index.css
@@ -7,5 +7,10 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   display: flex;
+  background-color: rgb(255, 237, 210);
 }
 
+* {
+  margin: 0;
+  padding: 0;
+}
