--- a/src/index.scss
+++ b/src/index.scss
@@ -1,16 +1,40 @@
+@import url('https://fonts.googleapis.com/css2?family=Kanit:wght@400;500;600&display=swap');
+
 body {
-  margin: 0;
-  padding: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-  'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-  sans-serif;
+  font-family: 'Kanit', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   display: flex;
-  background-color: rgb(255, 237, 210);
+  background: linear-gradient(159.28deg, #EAEFD3 55.13%, rgba(220, 196, 142, 0.66) 107.27%);
+  
+  background-repeat: no-repeat;
+  background-size: auto;
+  height: 500vh;
+  // overflow: hidden;
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;  /* Firefox */
+}
+
+body::-webkit-scrollbar {
+  display: none;
 }
 
 * {
   margin: 0;
   padding: 0;
+  cursor: default;
+}
+
+#root{
+  width: 100%;
+}
+
+
+:root{
+  --base-color-dark: #27233A;
+  --base-color-light: #EAEFD3;
+  --base-color-blue: #505168;
+  --base-color-yellow: #DCC48E;
+  
+  --fancy-shadow: 0px 39px 11px rgba(0, 0, 0, 0.01), 0px 25px 10px rgba(0, 0, 0, 0.04), 0px 14px 9px rgba(0, 0, 0, 0.15), 0px 6px 6px rgba(0, 0, 0, 0.26), 0px 2px 3px rgba(0, 0, 0, 0.29), 0px 0px 0px rgba(0, 0, 0, 0.3);
 }
