finish secound section ( projects slider )

--- a/src/components/links/links.scss
+++ b/src/components/links/links.scss
@@ -9,9 +9,8 @@
   bottom: 0;
 }
 
-.link{
-  height: 50px;
-  width: 50px;
+.links_link{
+  color: var(--base-color-yellow);
   background-color: var(--base-color-dark);
   box-shadow: var(--fancy-shadow);
   border-radius: 100%;
@@ -21,16 +20,15 @@
   
   cursor: pointer;
   
-  > .links_link{
-    color: var(--base-color-yellow);
-    height: 24px;
-    width: 24px;
-    text-decoration: none;
-    svg{
+  height: 40px;
+  width: 40px;
+  text-decoration: none;
+  text-align: center;
+  svg{
+    height: 18px;
+    cursor: pointer;
+    path{
       cursor: pointer;
-      path{
-        cursor: pointer;
-      }
     }
   }
-}
+  }
