--- a/src/components/sections/projects/projects.scss
+++ b/src/components/sections/projects/projects.scss
@@ -1,7 +1,3 @@
-.projects_img{
-  height: 30vh;
-}
-
 #Projects{
   box-sizing: border-box;
   padding: 3% 20%;
@@ -15,22 +11,44 @@
   align-items: center;
 }
 
+#swiper{
+  width: 50vw;
+}
+
 #Projects_Slider{
+  width: 100%;
   display: flex;
   flex-direction: row;
-  justify-content: center;
+  justify-content: space-between;
   flex-wrap: wrap;
   align-items: center;
 }
 
 .slider_arrow{
-  cursor: pointer;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  color: var(--base-color-dark);
   filter: drop-shadow(0px 39px 11px rgba(0, 0, 0, 0.01)) drop-shadow(0px 25px 10px rgba(0, 0, 0, 0.04)) drop-shadow(0px 14px 9px rgba(0, 0, 0, 0.15)) drop-shadow(0px 6px 6px rgba(0, 0, 0, 0.26)) drop-shadow(0px 2px 3px rgba(0, 0, 0, 0.29)) drop-shadow(0px 0px 0px rgba(0, 0, 0, 0.3));
+}
+
+@media only screen and (max-width: 768px) {
+  .slider_arrow {
+    display: none;
+  }
+  #swiper {
+    width: 100vw;
+  }
+}
+
+#swiper{
+  filter: drop-shadow(0px 39px 11px rgba(0, 0, 0, 0.01)) drop-shadow(0px 25px 10px rgba(0, 0, 0, 0.04)) drop-shadow(0px 14px 9px rgba(0, 0, 0, 0.15)) drop-shadow(0px 6px 6px rgba(0, 0, 0, 0.26)) drop-shadow(0px 2px 3px rgba(0, 0, 0, 0.29)) drop-shadow(0px 0px 0px rgba(0, 0, 0, 0.3));
+}
+
+.arrow_left, .arrow_right{
+  cursor: pointer;
   path{
     cursor: pointer;
   }
 }
 
-.active_img{
-  opacity: 20%;
-}
