a few section and project route page

--- a/src/routes/styles/Home.scss
+++ b/src/routes/styles/Home.scss
@@ -2,7 +2,7 @@
   scroll-snap-type: y mandatory;
   overflow-y: scroll;
   height: 100vh;
-  > div {
+  > section {
     scroll-snap-align: start;
   }
 }
