--- a/src/components/card/card.scss
+++ b/src/components/card/card.scss
@@ -49,6 +49,11 @@
   bottom: 0.5rem;
   left: 2rem;
   z-index: 1;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 24px;
+  line-height: 36px;
+  letter-spacing: 0.09em;
 }
 
 .card_img{
