--- a/src/components/navbar/navbar.scss
+++ b/src/components/navbar/navbar.scss
@@ -1,73 +1,105 @@
+#Navbar.dark{
+  .logo {
+    background-color: var(--base-color-light);
+    h1 {
+      color: var(--base-color-dark);
+    }
+  }
+  .mobile_menu_switch{
+    color: var(--base-color-dark);
+    background-color: var(--base-color-light);
+  }
+}
+
+#Navbar.light{
+  .logo {
+    background-color: var(--base-color-dark);
+    h1 {
+      color: var(--base-color-light);
+    }
+  }
+  .mobile_menu_switch{
+    color: var(--base-color-light);
+    background-color: var(--base-color-dark);
+  }
+}
+
+.navbar_link{
+  scroll-behavior: smooth;
+}
+
 #Navbar {
   position: fixed;
   top: 0;
   display: flex;
+  align-items: center;
+  z-index: 3;
   box-sizing: border-box;
   width: 100%;
   justify-content: space-between;
-  padding: 1rem 3rem;
 
   .logo {
-    width: 50px;
-    height: 50px;
-    background-color: var(--base-color-dark);
+    width: 40px;
+    height: 40px;
     box-shadow: var(--fancy-shadow);
     border-radius: 102px;
-    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    a{
+      text-decoration: none;
+      width: 100%;
+      text-align: center;
+    }
     h1 {
-      color: var(--base-color-light);
-
+      cursor: pointer;
       font-family: "Kanit";
       font-style: normal;
       font-weight: 600;
       font-size: 32px;
       line-height: 50px;
       text-transform: capitalize;
-      
     }
   }
   
-  .menu {
-    display: none;
-    gap: 3vw;
-    line-height: 40px;
-    a {
-      font-weight: 600;
-      letter-spacing: -0.005em;
-      font-size: 1.1rem;
-      text-decoration: none;
-      cursor: pointer;
-      color: var(--base-color-dark);
-    }
-    
-    .darkModeSwitch {
-      cursor: pointer;
-      width: 40px;
-      height: 40px;
-      border-radius: 100%;
-      background-color: var(--base-color-dark);
-      color: var(--base-color-light);
-      text-align: center;
-      box-shadow: var(--fancy-shadow);
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      svg{
-        cursor: pointer;
-        path{
-          cursor: pointer;
-        }
-      }
-    }
-  }
-  @media only screen and (min-width: 768px) {
-    /* For desktop: */
-    .menu {
-      display: flex;
+  .mobile_menu_switch{
+    width: 40px;
+    height: 40px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 100%;
+    box-shadow: var(--fancy-shadow);
+    .mobile_menu_switch-icon{
+      width: 35px;
+      height: 35px;
     }
   }
 }
 
-.navbar_link{
-  scroll-behavior: smooth;
+// Desktop
+@media screen and (min-width: 1024px) {
+  #Navbar{
+    padding: 1rem 3rem;
+    .logo{
+      margin: 0 3rem;
+    }
+  }
+}
+
+// Tablet
+@media screen and (max-width: 1023px) and (min-width: 768px) {
+  #Navbar{
+    padding: 1rem 2rem;
+    .logo{
+      margin: 0 1rem;
+    }
+  }
+}
+
+// Mobile
+@media screen and (max-width: 767px) {
+  #Navbar{
+    padding: 1rem;
+  }
 }
