--- a/src/components/sections/header/header.scss
+++ b/src/components/sections/header/header.scss
@@ -1,97 +1,234 @@
-#Header{
-
+#Header {
   box-sizing: border-box;
-  padding: 3% 20%;
   width: 100%;
-  height: 100vh;
-  
-  display:flex;
+  display: flex;
   flex-direction: column;
   justify-content: center;
   flex-wrap: wrap;
   align-items: flex-start;
   
-  h1{
+  h1,
+  h2 {
     font-style: normal;
+    text-transform: capitalize;
+  }
+
+  h1 {
     font-weight: 700;
-    font-size: 64px;
-    line-height: 96px;
-    text-transform: capitalize;
-    color: var(--base-color-dark);
   }
-  
-  h2{
-    font-style: normal;
+
+  h2 {
     font-weight: 600;
-    font-size: 55px;
-    line-height: 82px;
-    text-transform: capitalize;
-    color: var(--base-color-dark);
   }
-  
-  p{
+
+  p {
     font-style: normal;
     font-weight: 400;
-    font-size: 36px;
-    line-height: 54px;
     text-transform: lowercase;
-    color: var(--base-color-blue);
   }
-  
-  .header_links{
+
+  .header_links {
     display: flex;
-    margin-top: 3rem;
-    gap: 1vw;
   }
-  .header_link{
+  .header_link {
     text-decoration: none;
     cursor: pointer;
-    
-    &.header_cv{
-      background-color: var(--base-color-dark);
-      color: var(--base-color-yellow);
+
+    &.header_cv {
       display: flex;
-      width: 96px;
-      height: 48px;
-      line-height: 48px;
       border-radius: 32px;
       justify-content: center;
       box-shadow: var(--fancy-shadow);
       font-style: normal;
       font-weight: 600;
-      font-size: 24px;
-      line-height: 36px;
-      
+
       align-items: center;
       text-align: center;
       text-transform: uppercase;
     }
-    
-    &.header_about{
-      // background-color: var(--base-color-dark);
-      color: var(--base-color-dark);
-      display: flex;
-      width: 144px;
-      height: 48px;
-      
-      box-sizing: border-box;
-      
-      border: 4px solid #27233A;
-      border-radius: 32px;
 
-      line-height: 48px;
+    &.header_about {
+      display: flex;
+      box-sizing: border-box;
       border-radius: 32px;
       justify-content: center;
-      // box-shadow: var(--fancy-shadow);
-      filter: drop-shadow(0px 39px 11px rgba(0, 0, 0, 0.01)) drop-shadow(0px 25px 10px rgba(0, 0, 0, 0.04)) drop-shadow(0px 14px 9px rgba(0, 0, 0, 0.15)) drop-shadow(0px 6px 6px rgba(0, 0, 0, 0.26)) drop-shadow(0px 2px 3px rgba(0, 0, 0, 0.29)) drop-shadow(0px 0px 0px rgba(0, 0, 0, 0.3));
+      filter: drop-shadow(0px 39px 11px rgba(0, 0, 0, 0.01))
+        drop-shadow(0px 25px 10px rgba(0, 0, 0, 0.04))
+        drop-shadow(0px 14px 9px rgba(0, 0, 0, 0.15))
+        drop-shadow(0px 6px 6px rgba(0, 0, 0, 0.26))
+        drop-shadow(0px 2px 3px rgba(0, 0, 0, 0.29))
+        drop-shadow(0px 0px 0px rgba(0, 0, 0, 0.3));
       font-style: normal;
       font-weight: 600;
-      font-size: 24px;
-      line-height: 36px;
-      
+
       align-items: center;
       text-align: center;
       text-transform: uppercase;
+    }
+  }
+}
+
+#Header.dark {
+  h1,
+  h2 {
+    color: var(--base-color-light);
+  }
+
+  p {
+    color: var(--base-color-yellow);
+  }
+
+  .header_link {
+    &.header_cv {
+      background-color: var(--base-color-light);
+      color: var(--base-color-blue);
+    }
+
+    &.header_about {
+      color: var(--base-color-light);
+      border: 4px solid var(--base-color-light);
+    }
+  }
+}
+
+#Header.light {
+  h1,
+  h2 {
+    color: var(--base-color-dark);
+  }
+
+  p {
+    color: var(--base-color-blue);
+  }
+
+  .header_link {
+    &.header_cv {
+      background-color: var(--base-color-dark);
+      color: var(--base-color-yellow);
+      box-shadow: var(--fancy-shadow);
+    }
+
+    &.header_about {
+      color: var(--base-color-dark);
+      border: 4px solid #27233a;
+    }
+  }
+}
+
+// Desktop
+@media screen and (min-width: 1024px) {
+  #Header {
+    padding: 3% 20%;
+    min-height: 100vh;
+    h1 {
+      font-size: 4rem;
+    }
+
+    h2 {
+      font-size: 3rem;
+    }
+
+    p {
+      font-size: 2rem;
+    }
+    .header_links {
+      margin-top: 3rem;
+      gap: 1vw;
+    }
+    .header_link {
+      &.header_cv {
+        width: 96px;
+        height: 48px;
+        line-height: 48px;
+        font-size: 24px;
+      }
+
+      &.header_about {
+        width: 144px;
+        height: 48px;
+
+
+        line-height: 48px;
+        font-size: 24px;
+      }
+    }
+  }
+}
+
+// Tablet
+@media screen and (max-width: 1023px) and (min-width: 768px) {
+  #Header {
+    padding: 3% 15%;
+    min-height: 90vh;
+    h1 {
+      font-size: 2.5rem;
+    }
+
+    h2 {
+      font-size: 2rem;
+    }
+
+    p {
+      font-size: 1.5rem;
+    }
+    .header_links {
+      margin-top: 2rem;
+      gap: 1vw;
+    }
+    .header_link {
+      &.header_cv {
+        width: 80px;
+        height: 40px;
+        line-height: 48px;
+        font-size: 24px;
+      }
+
+      &.header_about {
+        width: 120px;
+        height: 40px;
+        line-height: 48px;
+        font-size: 24px;
+      }
+    }
+  }
+}
+
+// Mobile
+@media screen and (max-width: 767px) {
+  #Header {
+    padding: 15%;
+    min-height: 70vh;
+    h1 {
+      font-size: 2rem;
+      line-height: 5rem;
+    }
+    
+    h2 {
+      font-size: 1.5rem;
+      line-height: 3rem;
+    }
+
+    p {
+      font-size: 1rem;
+    }
+    .header_links {
+      margin-top: 2rem;
+      gap: 3vw;
+    }
+    .header_link {
+      &.header_cv {
+        width: 80px;
+        height: 40px;
+        line-height: 48px;
+        font-size: 24px;
+      }
+
+      &.header_about {
+        width: 120px;
+        height: 40px;
+        line-height: 48px;
+        font-size: 24px;
+      }
     }
   }
 }
