--- a/src/components/sections/skills/skills.scss
+++ b/src/components/sections/skills/skills.scss
@@ -1,30 +1,27 @@
 #Skills{
   box-sizing: border-box;
-  padding: 8% 20%;
   width: 100%;
-  min-height: 100vh;
   
   display:flex;
   flex-direction: row;
-  justify-content: center;
+  justify-content: space-evenly;
   flex-wrap: wrap;
   align-items: center;
+  align-content: center;
 }
 
-.skill{
+.skill div{
   display: flex;
-  width: 15rem;
+  width: 10rem;
   flex-direction: column;
   align-items: center;
-  color: var(--base-color-dark);
 }
 
 .skill::after{
   content: "";
   display: block;
-  width: 100.9%;
+  width: 100%;
   height: 5px;
-  background: var(--base-color-dark);
   border-radius: 10px;
   margin: 2rem 0;
   box-shadow: var(--fancy-shadow);
@@ -33,4 +30,46 @@
 
 .skill_icon{
   height: 100px;
+}
+
+#Skills.dark{
+  .skill{
+    color: var(--base-color-light);
+  }
+  .skill::after{
+    background: var(--base-color-light);
+  }
+}
+
+#Skills.light{
+  .skill{
+    color: var(--base-color-dark);
+  }
+  .skill::after{
+    background: var(--base-color-dark);
+  }
+}
+
+// Desktop
+@media screen and (min-width: 1024px) {
+  #Skills{
+    padding: 8% 20%;
+    min-height: 100vh;
+  }
+}
+
+// Tablet
+@media screen and (max-width: 1023px) and (min-width: 768px) {
+  #Skills{
+    padding: 10%;
+    min-height: 85vh;
+  }
+}
+
+// Mobile
+@media screen and (max-width: 767px) {
+  #Skills{
+    padding: 5%;
+    min-height: 70vh;
+  }
 }
