--- a/src/routes/styles/Project.scss
+++ b/src/routes/styles/Project.scss
@@ -2,7 +2,7 @@
   min-height: 100vh;
   box-sizing: border-box;
   padding: 8% 20%;
-  width: 100%;
+  width:  100%;
   
   display: flex;
   flex-direction: column;
@@ -10,6 +10,7 @@
   flex-wrap: wrap;
   align-items: center;
   gap: 2rem;
+  background: linear-gradient(-159.28deg, var(--base-color-light) 55.13%, var(--base-color-yellow) 107.27%);
 }
 
 .project_title{
@@ -29,6 +30,7 @@
   position: relative;
   display: flex;
   border-radius: 18px;
+  box-shadow: var(--fancy-shadow);
 }
 
 .project_imgbox::after{
@@ -51,9 +53,11 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  gap: 2rem;
+  gap: 4rem;
+  
   p{
     text-align: center;
+    font-size: 1.1rem;
   }
 }
 
@@ -73,8 +77,66 @@
   justify-content: center;
   
   border-radius: 100%;
+  box-shadow: var(--fancy-shadow);
   
   .project_link-icon{
     color: var(--base-color-yellow);
   }
 }
+
+.project_skill{
+  display: flex;
+  width: 10rem;
+  flex-direction: column;
+  align-items: center;
+  color: var(--base-color-dark);
+}
+
+.project_skill::after{
+  content: "";
+  display: block;
+  width: 100.9%;
+  height: 3px;
+  background: var(--base-color-dark);
+  border-radius: 10px;
+  margin: 1rem 0;
+  box-shadow: var(--fancy-shadow);
+}
+
+
+
+
+
+
+
+
+#Project.dark{
+  background: linear-gradient(-159.28deg, var(--base-color-blue) 55.13%, var(--base-color-dark) 107.27%);
+
+  .project_title{
+    color: var(--base-color-light);
+  }
+  
+  .project_button-link{
+  background-color: var(--base-color-light);
+  
+    .project_link-icon{
+      color: var(--base-color-blue);
+    }
+  } 
+  
+  .project_skill{
+    color: var(--base-color-light);
+  }
+  
+  .project_content{
+    p{
+      color: var(--base-color-light);
+    }
+  }
+  
+  .project_skill::after{
+    background: var(--base-color-light);
+  }
+}
+
