Small fix of UI

--- a/src/routes/styles/About.scss
+++ b/src/routes/styles/About.scss
@@ -48,7 +48,7 @@
 // Tablet
 @media screen and (max-width: 1023px) and (min-width: 768px) {
   #About{
-    padding: 10% 15%;
+    padding: 15%;
     .years{
       gap: 3rem;
     }
