--- a/src/components/contactLinks/contactLinks.scss
+++ b/src/components/contactLinks/contactLinks.scss
@@ -5,7 +5,7 @@
   justify-content: center;
   box-sizing: border-box;
   flex-direction: row;
-  min-height: 90vh;
+  height: 100vh;
   align-items: center;
 }
 
