--- a/src/components/sections/contact/Contact.scss
+++ b/src/components/sections/contact/Contact.scss
@@ -12,7 +12,7 @@
 // Desktop
 @media screen and (min-width: 1024px) {
   #Contact{
-    padding: 3% 20%;
+    padding: 3% 20% 0;
     min-height: 100vh;
   }
 }
@@ -20,7 +20,7 @@
 // Tablet
 @media screen and (max-width: 1023px) and (min-width: 768px) {
   #Contact{
-    padding: 3% 20%;
+    padding: 3% 20% 0;
     min-height: 100vh;
   }
 }
