--- a/src/components/navbar/navbar.scss
+++ b/src/components/navbar/navbar.scss
@@ -1,30 +1,30 @@
-#Navbar.dark{
+#Navbar.dark {
   .logo {
     background-color: var(--base-color-light);
-    h1 {
-      color: var(--base-color-dark);
+    .navbar_link-icon {
+      color: var(--base-color-blue);
     }
   }
-  .mobile_menu_switch{
+  .mobile_menu_switch {
     color: var(--base-color-dark);
     background-color: var(--base-color-light);
   }
 }
 
-#Navbar.light{
+#Navbar.light {
   .logo {
     background-color: var(--base-color-dark);
-    h1 {
+    .navbar_link-icon {
       color: var(--base-color-light);
     }
   }
-  .mobile_menu_switch{
+  .mobile_menu_switch {
     color: var(--base-color-light);
     background-color: var(--base-color-dark);
   }
 }
 
-.navbar_link{
+.navbar_link {
   scroll-behavior: smooth;
 }
 
@@ -38,6 +38,13 @@
   width: 100%;
   justify-content: space-between;
 
+  .logo,
+  .logo > a,
+  .logo > a > .navbar_link-icon,
+  .logo > a > .navbar_link-icon > path {
+    cursor: pointer;
+  }
+
   .logo {
     width: 40px;
     height: 40px;
@@ -46,23 +53,19 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    a{
+    a {
+      display: flex;
       text-decoration: none;
       width: 100%;
       text-align: center;
+      justify-content: center;
     }
-    h1 {
-      cursor: pointer;
-      font-family: "Kanit";
-      font-style: normal;
-      font-weight: 600;
-      font-size: 32px;
-      line-height: 50px;
-      text-transform: capitalize;
+    .navbar_link-icon {
+      font-size: 20px;
     }
   }
-  
-  .mobile_menu_switch{
+
+  .mobile_menu_switch {
     width: 40px;
     height: 40px;
     display: flex;
@@ -70,7 +73,7 @@
     justify-content: center;
     border-radius: 100%;
     box-shadow: var(--fancy-shadow);
-    .mobile_menu_switch-icon{
+    .mobile_menu_switch-icon {
       width: 35px;
       height: 35px;
     }
@@ -79,9 +82,9 @@
 
 // Desktop
 @media screen and (min-width: 1024px) {
-  #Navbar{
+  #Navbar {
     padding: 1rem 3rem;
-    .logo{
+    .logo {
       margin: 0 3rem;
     }
   }
@@ -89,9 +92,9 @@
 
 // Tablet
 @media screen and (max-width: 1023px) and (min-width: 768px) {
-  #Navbar{
+  #Navbar {
     padding: 1rem 2rem;
-    .logo{
+    .logo {
       margin: 0 1rem;
     }
   }
@@ -99,7 +102,7 @@
 
 // Mobile
 @media screen and (max-width: 767px) {
-  #Navbar{
+  #Navbar {
     padding: 1rem;
   }
 }
