--- a/src/components/sections/contact/Contact.scss
+++ b/src/components/sections/contact/Contact.scss
@@ -1,8 +1,7 @@
-#Contact{
-
+#Contact {
   box-sizing: border-box;
   width: 100%;
-  
+
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -10,25 +9,61 @@
 }
 
 // Desktop
-@media screen and (min-width: 1024px) {
-  #Contact{
-    padding: 3% 20% 0;
-    min-height: 100vh;
+@media (pointer: fine) {
+  // Big
+  @media (min-width: 1024px) {
+    #Contact {
+      padding: 3% 20% 0;
+      min-height: 100vh;
+    }
   }
-}
 
-// Tablet
-@media screen and (max-width: 1023px) and (min-width: 768px) {
-  #Contact{
-    padding: 3% 20% 0;
-    min-height: 100vh;
+  // Medium
+  @media (max-width: 1023px) and (min-width: 768px) {
+    #Contact {
+      padding: 3% 20% 0;
+      min-height: 100vh;
+    }
+  }
+
+  // Small
+  @media (max-width: 767px) {
+    #Contact {
+      padding: 5% 5% 0;
+      min-height: 100vh;
+    }
+    .copyright {
+      font-size: small;
+    }
   }
 }
 
 // Mobile
-@media screen and (max-width: 767px) {
-  #Contact{
-    padding: 5%;
-    min-height: 70vh;
+@media only screen and (hover: none) and (pointer: coarse) {
+  // Big
+  @media (min-width: 1024px) {
+    #Contact {
+      padding: 3% 20% 0;
+      min-height: 100vh;
+    }
+  }
+
+  // Medium
+  @media (max-width: 1023px) and (min-width: 768px) {
+    #Contact {
+      padding: 3% 20% 0;
+      min-height: 70vh;
+    }
+  }
+
+  // Small
+  @media (max-width: 767px) {
+    #Contact {
+      padding: 5% 5% 0;
+      min-height: 50vh;
+    }
+    .copyright {
+      font-size: small;
+    }
   }
 }
