--- a/src/components/sections/contact/Contact.scss
+++ b/src/components/sections/contact/Contact.scss
@@ -8,29 +8,62 @@
   align-items: center;
 }
 
-// Big
-@media (min-width: 1024px) {
-  #Contact {
-    padding: 3% 20% 0;
-    min-height: 100vh;
+// Desktop
+@media (pointer: fine) {
+  // Big
+  @media (min-width: 1024px) {
+    #Contact {
+      padding: 3% 20% 0;
+      min-height: 100vh;
+    }
+  }
+
+  // Medium
+  @media (max-width: 1023px) and (min-width: 768px) {
+    #Contact {
+      padding: 3% 20% 0;
+      min-height: 100vh;
+    }
+  }
+
+  // Small
+  @media (max-width: 767px) {
+    #Contact {
+      padding: 5% 5% 0;
+      min-height: 100vh;
+    }
+    .copyright {
+      font-size: small;
+    }
   }
 }
 
-// Medium
-@media (max-width: 1023.98px) and (min-width: 768px) {
-  #Contact {
-    padding: 3% 20% 0;
-    min-height: 70vh;
+// Mobile
+@media only screen and (hover: none) and (pointer: coarse) {
+  // Big
+  @media (min-width: 1024px) {
+    #Contact {
+      padding: 3% 20% 0;
+      min-height: 100vh;
+    }
   }
-}
 
-// Small
-@media (max-width: 767.98px) {
-  #Contact {
-    padding: 5% 5% 0;
-    min-height: 50vh;
+  // Medium
+  @media (max-width: 1023px) and (min-width: 768px) {
+    #Contact {
+      padding: 3% 20% 0;
+      min-height: 70vh;
+    }
   }
-  .copyright {
-    font-size: small;
+
+  // Small
+  @media (max-width: 767px) {
+    #Contact {
+      padding: 5% 5% 0;
+      min-height: 50vh;
+    }
+    .copyright {
+      font-size: small;
+    }
   }
 }
